<resources>
    <string name="app_name">Meonail</string>
    <string name="hello_blank_fragment">화면</string>

    <!-- 바텀 네비게이션 바 -->
    <string name="title_calendar">캘린더</string>
    <string name="title_memory">추억</string>
    <string name="title_home">홈</string>
    <string name="title_wish">위시</string>
    <string name="title_mypage">마이페이지</string>

    <!-- 캘린더 -->
    <string name="calrender_day">요일</string>
    <string name="_0">날짜</string>

    <!-- 프로필 -->
    <string name="profile_image_desc">프로필 이미지</string>
    <string name="nickname_default">User</string>
    <string name="logout_button_text">로그아웃</string>

    <!-- 위시리스트 -->
    <string name="wishlist_button_text">위시리스트 확인하기</string>

    <!-- 드롭다운 메뉴 항목 -->
    <string-array name="category_array">
        <item>영화</item>
        <item>드라마</item>
        <item>책</item>
        <item>공연</item>
        <item>음악</item>
    </string-array>

    <!-- 로그인 -->
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <!-- 홈 화면 정렬 드롭다운 메뉴 항목 -->
    <string-array name="sort_options">
        <item>최신순</item>
        <item>오래된순</item>
    </string-array>
</resources>


