<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_calendar"
        android:icon="@drawable/baseline_calendar_today_24"
        android:title="@string/title_calendar" />

    <item
        android:id="@+id/navigation_wish"
        android:icon="@drawable/baseline_search_24"
        android:title="@string/title_wish" />

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_memory"
        android:icon="@drawable/baseline_auto_awesome_24"
        android:title="@string/title_memory" />

    <item
        android:id="@+id/navigation_mypage"
        android:icon="@drawable/baseline_account_circle_24"
        android:title="@string/title_mypage" />
</menu>