<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_calendar"
        android:name="com.example.meonail.CalendarFragment"
        android:label="@string/title_calendar"
        tools:layout="@layout/fragment_calendar" />

    <fragment
        android:id="@+id/navigation_memory"
        android:name="com.example.meonail.MemoryFragment"
        android:label="@string/title_memory"
        tools:layout="@layout/fragment_memory" />

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.meonail.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
        <!-- 홈에서 상세 페이지로 가는 액션 추가 -->
        <action
            android:id="@+id/action_home_to_recordInfo"
            app:destination="@id/recordInfoFragment" />
    </fragment>

    <fragment
        android:id="@+id/recordInfoFragment"
        android:name="com.example.meonail.RecordInfoFragment"
        android:label="Record Info"
        tools:layout="@layout/fragment_record_info">
        <argument
            android:name="record_id"
            app:argType="integer" />
    </fragment>


    <fragment
        android:id="@+id/navigation_wish"
        android:name="com.example.meonail.WishFragment"
        android:label="@string/title_wish"
        tools:layout="@layout/fragment_wish" />

    <fragment
        android:id="@+id/navigation_mypage"
        android:name="com.example.meonail.MypageFragment"
        android:label="@string/title_mypage"
        tools:layout="@layout/fragment_mypage" />


    <fragment
        android:id="@+id/home_fragment"
        android:name="com.example.meonail.ui.home.HomeFragment"
        android:label="홈"
        tools:layout="@layout/fragment_home" >
        <!-- 후기 작성 화면으로 이동하는 액션 -->
        <action
            android:id="@+id/action_home_to_record"
            app:destination="@id/review_activity" />
    </fragment>

    <activity
        android:id="@+id/review_activity"
        android:name="com.example.meonail.RecordRegistActivity"
        android:label="후기 작성"
        tools:layout="@layout/activity_record_regist" />

</navigation>